# -2024-

./: README.md
ROS2/kaohe/pub/src/: pub.cpp
ROS2/kaohe/sub/: setup.py
代码/C++应用题/: C++应用题.cpp  Point.hpp
代码/OpenCV/基础题/: 滑动条（视频）.cpp  颜色分割.cpp  鼠标事件框选图像.cpp
代码/OpenCV/应用题/: 相机标定.cpp  轮廓提取.cpp
代码/OpenCV/赛事题/思路/: 能量机关识别.txt  装甲板识别.txt
代码/OpenCV/赛事题/数字识别模型/: lenet5_armor_end.onnx
代码/OpenCV/赛事题/数字识别模型训练代码/: LeNet5_end.py  export_to_onnx.py  说明.txt
代码/OpenCV/赛事题/能量机关识别代码/: BBox.hpp  BuffTracker.cpp  BuffTracker.hpp  config.hpp  main.cpp
代码/OpenCV/赛事题/装甲板识别代码/: 说明.txt
代码/OpenCV/赛事题/装甲板识别代码/数字识别部分/: ArmorBox.cpp  ArmorBox.hpp  ArmorDected.cpp  ArmorDetected.hpp  ArmorNumClassifier.cpp  ArmorNumClassifier.hpp  BBox.cpp  LightBar.cpp  config.hpp  function.cpp  function.hpp  main.cpp
代码/OpenCV/赛事题/装甲板识别代码/装甲板测距部分/: ArmorBox.cpp  ArmorBox.hpp  ArmorDetected.cpp  ArmorDetected.hpp  BBox.hpp  LightBar.cpp  LightBar.hpp  config.hpp  function.cpp  function.hpp  main.cpp
代码/ROS2/kaohe/pub/: CMakeLists.txt  package.xml
代码/ROS2/kaohe/sub/: package.xml  setup.cfg
代码/ROS2/kaohe/sub/sub/: sub.py
代码/ROS2/思路/: ROS2.txt
代码/深度学习/任务1/: train(pytorch).ipynb  val(pytorch).ipynb  说明.txt
代码/深度学习/任务2/: 说明.txt
代码/深度学习/任务2/yolov8-main/: auto_datasets.py  detect.py  说明.txt
代码/深度学习/任务2/yolov8-main/runs/detect/SHANZHI_NEW03/: args.yaml  results.csv
代码/深度学习/任务3/: Learning Efficient Convolutional Networks through阅读笔记.docx  Learning Efficient Convolutional Networks through阅读笔记.txt  ~$arning Efficient Convolutional Networks through阅读笔记.docx
代码/赛事知识题/: RM赛事知识题.txt
基础题/: 滑动条（视频）.cpp  颜色分割.cpp  鼠标事件框选图像.cpp
完成情况/: 完成度  完成情况.txt
赛事知识题/: RM赛事知识题.docx
